--- a/src/pages/Productlisting/ProductListing.css
+++ b/src/pages/Productlisting/ProductListing.css
@@ -67,4 +67,35 @@ strong{
 
 .vertical-card-content{
     font-size: 14px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.card-badge{
+    background-color: var(--primary-color);
+    border-radius:0px;
+    border: 1px 0px 1px 1px solid red;
+    top: 5px;
+}
+
+.card-badge-fav{
+    position: absolute;
+    top: 1;
+    right:0;
+    color: var(--primary-color)
+}
+
+.btn{
+    width:90%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    justify-content: space-evenly;
+    color: var(--secondary-color);
+    margin: 5px;
+}
+.btn:hover{
+    background-color:rgba(0, 0, 0, 0.648);
 }
