--- a/src/pages/auth/auth.css
+++ b/src/pages/auth/auth.css
@@ -30,10 +30,8 @@
 }
 
 .btn{
-    font-size: large;
     background-color: var(--primary-color);
-    margin: 1.5rem;
-    width: 8rem;
+    width:8rem !important ;
     color: black;
     cursor: pointer;
 }
@@ -43,15 +41,12 @@
     color: var(--primary-color);
 }
 
-.sign-up{
-    color:tomato;
+.log-btn{
+    display:flex;
 }
-
-.forget-pwd:hover, .sign-up:hover{
-    color:var(--secondary-color);
-}
-
-.forget-pwd{
-    margin-left: 6rem;
-    color: tomato;
+.log-cred{
+    width: 20rem;
+    display: flex;
+    justify-content: space-between;
+    margin :10px 0;
 }
