--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,9 +1,18 @@
 .vertical-card{
-    padding: 5px;
     flex-grow: 1;
-    background-color: var(--secondary-color);
+    background-color: var(--bg-color);
     max-width: 210px;
     margin:30px 0 0 30px;
+}
+.img-container{
+    background-color:var(--secondary-color);
+    width: 100%;
+    height: 100% !important;
+}
+
+.vertical-card-img{
+    width: 100%;
+    height: 100%;
 }
 
 .rating{
@@ -18,18 +27,23 @@
 }
 
 .vertical-card-content{
+    margin: 5px;
+    width: 100%;
+    height: 40%;
     font-size: 14px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    row-gap: 3px;
+    color: var(--secondary-color);
 }
 
 .card-badge{
     background-color: var(--primary-color);
     border-radius:0px;
-    background-color: red;
-    color: white;
+    background-color: var(--primary-color);
+    color: var(--secondary-color);
     top: 5px;
     display: flex;
     justify-content: center;
