--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -5,12 +5,7 @@
     margin:30px 0 0 30px;
 }
 .img-container{
-    background-color:var(--secondary-color);
-    width: 100%;
-    height: 70% !important;
-}
-
-.vertical-card-img{
+    background-color: #fff;
     width: 100%;
     height: 70%;
 }
@@ -27,7 +22,6 @@
 }
 
 .vertical-card-content{
-    margin: 5px;
     width: 100%;
     height: 30%;
     font-size: 14px;
