--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -22,8 +22,9 @@
 }
 
 .vertical-card-content{
+    margin: 5px;
     width: 100%;
-    height: 30%;
+    height: 40%;
     font-size: 14px;
     display: flex;
     flex-direction: column;
