--- a/src/pages/Cart/Cart.css
+++ b/src/pages/Cart/Cart.css
@@ -23,8 +23,7 @@
 }
 
 .img-container{
-    max-width: 30vw;
-    width: 50%;
+    width: 25vw !important;
     height: 100% !important;
     background-color: var(--secondary-color);
 }
