--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,13 +1,21 @@
 .vertical-card{
     flex-grow: 1;
     background-color: var(--bg-color);
-    max-width: 210px;
+    max-width: 250px;
+    height:fit-content !important;
     margin:30px 0 0 30px;
+    
 }
 .img-container{
     background-color: #fff;
-    width: 100%;
-    height: 70%;
+    width: 100% !important; 
+    height: 80% !important;
+    object-fit: cover;
+}
+
+.vertical-card-img{
+    width: 100% !important;
+    height: 100% !important;
 }
 
 .rating{
@@ -24,14 +32,14 @@
 .vertical-card-content{
     margin: 5px;
     width: 100%;
-    height: 40%;
+    height: 100% !important;
     font-size: 14px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    row-gap: 3px;
     color: var(--secondary-color);
+    row-gap: 3px;
 }
 
 .card-badge{
