--- a/src/pages/Cart/Cart.css
+++ b/src/pages/Cart/Cart.css
@@ -14,7 +14,7 @@
 .cart-card{
     box-sizing: border-box;
     width: 100%;
-    height:50vh;
+    height:fit-content;
     background-color:var(--secondary-color);
     display:flex;
     margin: 10px;
@@ -22,9 +22,10 @@
     background-color: var(--bg-color);
 }
 
-.img-container{
-    width: 25vw !important;
-    height: 100% !important;
+#img-container{
+
+    width: 10rem;
+    height:15rem ;
     background-color: var(--secondary-color);
 }
 
