--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@
 *{
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 body{
@@ -25,4 +26,13 @@ input{
 
 h1,h2,h3,h4,h5,h6{
     color:var(--primary-color);
+}
+
+@keyframes move {
+    from{
+        transform: translate(-100%);
+    }
+    to{
+        transform: translate(150%);
+    }
 }
