--- a/src/pages/Cart/Cart.css
+++ b/src/pages/Cart/Cart.css
@@ -113,3 +113,7 @@
     background-color: var(--bg-color);
     border: 1px solid var(--primary-color);
 }
+
+button:disabled{
+    cursor: not-allowed;
+}
