--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,15 +1,10 @@
 .vertical-card{
-    flex-grow: 1;
-    background-color: var(--bg-color);
-    max-width: 250px;
+    background-color: var(--secondary-color);
+    width:240px;
     height:fit-content !important;
-    margin:30px 0 0 30px;
-    
+    margin:5px;
 }
 .img-container{
-    background-color: #fff;
-    width: 100% !important; 
-    height: 80% !important;
     object-fit: cover;
 }
 
@@ -30,7 +25,6 @@
 }
 
 .vertical-card-content{
-    margin: 5px;
     width: 100%;
     height: 100% !important;
     font-size: 14px;
@@ -38,8 +32,9 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    color: var(--secondary-color);
+    color: black;
     row-gap: 3px;
+    background-color: var(--secondary-color);
 }
 
 .card-badge{
@@ -73,4 +68,10 @@
 }
 .btn:hover{
     background-color:rgba(0, 0, 0, 0.648);
+}
+
+.price{
+    width: 60%;
+    display: flex;
+    justify-content: space-between;
 }
