--- a/src/pages/Productlisting/ProductListing.css
+++ b/src/pages/Productlisting/ProductListing.css
@@ -1,5 +1,6 @@
 .home-page-content{
     display:flex;
+    min-height: 80vh;
 }
 
 .filters{
@@ -14,6 +15,21 @@
     border-right: 1px solid var(--primary-color);
 }
 
+@media screen and (max-width:700px) {
+    .product-list{
+        margin-top: 4rem !important;
+    }
+    .FAB{
+        display: flex !important;
+        background-color: var(--primary-color)!important;
+        position:fixed !important;
+        top:11vh !important;
+        right: 10% !important;
+        margin:0 10%;
+        z-index: 999!important;
+    }
+}
+
 .clear{
     text-decoration: none;
     color: var(--secondary-color);
@@ -22,7 +38,7 @@
     cursor: pointer;
 }
 .clear:hover{
-    color: red;
+    color:var(--primary-color);
 }
 
 ul>span{
@@ -34,10 +50,10 @@ ul{
 }
 
 .product-list{
-    margin-bottom: 30px;
-    margin-right: 30px;
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
+    margin-top:2rem;
 }
 
 strong{
@@ -48,5 +64,11 @@ strong{
     cursor: pointer;
 }
 
+.FAB{
+    display: none;
+}
 
-
+.FAB:hover{
+    border: 1px solid var(--primary-color)!important;
+    background-color: var(--bg-color) !important;
+}
