--- a/src/pages/Productlisting/ProductListing.css
+++ b/src/pages/Productlisting/ProductListing.css
@@ -15,20 +15,6 @@
     border-right: 1px solid var(--primary-color);
 }
 
-@media screen and (max-width:700px) {
-    .product-list{
-        margin-top: 4rem !important;
-    }
-    .FAB{
-        display: flex !important;
-        background-color: var(--primary-color)!important;
-        position:fixed !important;
-        top:11vh !important;
-        right: 10% !important;
-        margin:0 10%;
-        z-index: 999!important;
-    }
-}
 
 .clear{
     text-decoration: none;
@@ -53,7 +39,8 @@ ul{
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    margin-top:2rem;
+    margin:4rem 0 2rem 0;
+    width: 100%;
 }
 
 strong{
@@ -65,10 +52,35 @@ strong{
 }
 
 .FAB{
-    display: none;
+    display: flex !important;
+    background-color: var(--primary-color)!important;
+    position:fixed !important;
+    top:12.5vh !important;
+    right: 2% !important;
+    margin:0 10%;
+    z-index: 999!important;
 }
 
-.FAB:hover{
+.paginate>a:hover,.FAB:hover{
     border: 1px solid var(--primary-color)!important;
     background-color: var(--bg-color) !important;
+}
+
+.paginate{
+    display: flex;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin: 12px 0;
+}
+.paginate>a{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height:2rem;
+    width:2rem;
+    background-color: var(--primary-color);
+    text-decoration: inherit;
+    color: var(--secondary-color);
 }
