--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,7 @@ body{
     background-size: contain;
     background-color: black;
     color: var(--secondary-color);
+    min-height: 100vh;
 }
 
 input{
@@ -30,9 +31,9 @@ h1,h2,h3,h4,h5,h6{
 
 @keyframes move {
     from{
-        transform: translate(-100%);
+        transform: translate(-10vw);
     }
     to{
-        transform: translate(150%);
+        transform: translate(100vw);
     }
 }
