--- a/src/pages/Cart/Cart.css
+++ b/src/pages/Cart/Cart.css
@@ -1,4 +1,5 @@
 .cart-container{
+    position: relative;
     min-height:100vh;
     margin:5px;
     display: flex;
@@ -108,7 +109,7 @@
     color: white;
     border-radius: 5px;
 }
-.cart-btn:hover{
+.cart-btn:hover , .modal-close:hover{
     color: var(--primary-color);
     background-color: var(--bg-color);
     border: 1px solid var(--primary-color);
